// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`analyze returns a list of errors for a file with a missing node 1`] = `
Array [
  Object {
    "message": "Syntax error: expected \\"fi\\" somewhere in the file",
    "range": Object {
      "end": Object {
        "character": 0,
        "line": 12,
      },
      "start": Object {
        "character": 0,
        "line": 12,
      },
    },
    "severity": 2,
  },
]
`;

exports[`analyze returns a list of errors for a file with parsing errors 1`] = `
Array [
  Object {
    "message": "Failed to parse",
    "range": Object {
      "end": Object {
        "character": 1,
        "line": 9,
      },
      "start": Object {
        "character": 0,
        "line": 2,
      },
    },
    "severity": 1,
  },
]
`;

exports[`findReferences returns a list of locations if parameter is found 1`] = `
Array [
  Object {
    "range": Object {
      "end": Object {
        "character": 12,
        "line": 148,
      },
      "start": Object {
        "character": 0,
        "line": 148,
      },
    },
    "uri": "dummy-uri.sh",
  },
  Object {
    "range": Object {
      "end": Object {
        "character": 45,
        "line": 152,
      },
      "start": Object {
        "character": 33,
        "line": 152,
      },
    },
    "uri": "dummy-uri.sh",
  },
  Object {
    "range": Object {
      "end": Object {
        "character": 20,
        "line": 162,
      },
      "start": Object {
        "character": 8,
        "line": 162,
      },
    },
    "uri": "dummy-uri.sh",
  },
  Object {
    "range": Object {
      "end": Object {
        "character": 31,
        "line": 165,
      },
      "start": Object {
        "character": 19,
        "line": 165,
      },
    },
    "uri": "dummy-uri.sh",
  },
]
`;

exports[`getDeclarationsForUri issue 101 1`] = `
Array [
  Object {
    "kind": 12,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 1,
          "line": 14,
        },
        "start": Object {
          "character": 0,
          "line": 3,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "add_a_user",
  },
]
`;

exports[`getDeclarationsForUri returns a list of SymbolInformation if uri is found 1`] = `
Array [
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 68,
          "line": 38,
        },
        "start": Object {
          "character": 0,
          "line": 38,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "configures",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 27,
          "line": 40,
        },
        "start": Object {
          "character": 0,
          "line": 40,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "npm_config_loglevel",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 22,
          "line": 53,
        },
        "start": Object {
          "character": 0,
          "line": 53,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "node",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 6,
          "line": 265,
        },
        "start": Object {
          "character": 0,
          "line": 265,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "ret",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 19,
          "line": 73,
        },
        "start": Object {
          "character": 0,
          "line": 73,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "TMP",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 11,
          "line": 81,
        },
        "start": Object {
          "character": 0,
          "line": 81,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "BACK",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 12,
          "line": 84,
        },
        "start": Object {
          "character": 0,
          "line": 84,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "tar",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 11,
          "line": 116,
        },
        "start": Object {
          "character": 0,
          "line": 116,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "MAKE",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 37,
          "line": 148,
        },
        "start": Object {
          "character": 0,
          "line": 148,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "node_version",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 18,
          "line": 158,
        },
        "start": Object {
          "character": 0,
          "line": 158,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "t",
  },
  Object {
    "kind": 13,
    "location": Object {
      "range": Object {
        "end": Object {
          "character": 25,
          "line": 179,
        },
        "start": Object {
          "character": 0,
          "line": 177,
        },
      },
      "uri": "dummy-uri.sh",
    },
    "name": "url",
  },
]
`;
